x.x.x
UI: Add account ID to account info popup in Known Accounts page

1.1.1 2023-09-13
Bugfix: Settings item "Only fetch from DeltaChat folder" did not act correctly
Feature: Connectivity information
UI: Image viewer: Double tap will alternate between scaling image to fit screen and original size; removed pre-scaling of small images
UI: Better highlighting of contact requests
Other: Improve readability of logging output; add missing events to log

1.1.0 2023-07-24
Feature: Clear chat
Feature: Act as primary device to add second device via QR code
Feature: In-app QR code scanning
Feature: Load QR code as image
UI: Adapt link colors for better contrast
UI: Show information if provider needs special settings
UI: Truncate long quoted texts; click toggles expand/collapse if jump to quoted msg is not possible
Bugfix: Correctly format links after newline
Bugfix: (focal only) Correct About page to state focal instead of xenial
Bugfix: Use correct color for quoted text in all cases
Bugfix: Keep aspect ratio in image viewer for small images, too
Bugfix: Adapt decorations of message bubbles if new message is received
Other: Check whether image attachment is gif and send as gif if yes
Other: Use deltachat-core-rust v1.118.0

1.0.0 2023-07-01
Initial release